[gd_scene load_steps=3 format=3 uid="uid://bkuq21loo3xbn"]

[ext_resource type="Script" uid="uid://bpmt83qyj420u" path="res://scene/ui/audio_setting_h_box_container.gd" id="1_l44qg"]

[sub_resource type="LabelSettings" id="LabelSettings_f562o"]
font_size = 24

[node name="AudioSettingHBoxContainer" type="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
offset_right = 40.0
offset_bottom = 40.0
size_flags_vertical = 4
theme_override_constants/separation = 30
script = ExtResource("1_l44qg")

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "主音量"
label_settings = SubResource("LabelSettings_f562o")
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="CheckButton" type="CheckButton" parent="."]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 24
text = "静音"

[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
